--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,10 +2,13 @@ server.port=8080
 server.address=localhost
 spring.application.name=smartDine
 
+# SSL Configuration - DISABLED for local development
+server.ssl.enabled=false
+
 # Database Configuration
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=postgres
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/smartDine}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:mV00R152}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.docker.compose.enabled=false
 # JPA/Hibernate Configuration
