--- a/api.yaml
+++ b/api.yaml
@@ -1193,7 +1193,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /smartdine/api/communities/{communityId}/openreservationposts/{postId}:
+  /smartdine/api/communities/openreservationposts/{postId}:
     put:
       tags:
         - Communities
@@ -1205,13 +1205,6 @@ paths:
       security:
         - bearerAuth: []
       parameters:
-        - in: path
-          name: communityId
-          required: true
-          schema:
-            type: integer
-            format: int64
-          description: ID of the community
         - in: path
           name: postId
           required: true
@@ -1265,13 +1258,6 @@ paths:
       security:
         - bearerAuth: []
       parameters:
-        - in: path
-          name: communityId
-          required: true
-          schema:
-            type: integer
-            format: int64
-          description: ID of the community
         - in: path
           name: postId
           required: true
