--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ aws.s3.bucket=${AWS_S3_BUCKET:smartdine-s3-bucket}
 spring.docker.compose.enabled=false
 
 # File upload size limits
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=8388608B
+spring.servlet.multipart.max-request-size=8388608B
 
 # JPA defaults
 spring.jpa.show-sql=false
